JumpScript/tests/baselines/reference/parserSymbolIndexer4.errors.txt
tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer4.jump(2,6): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer4.jump (1 errors) ====
    var x: {
        [s: symbol]: string;
         ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }